@@ -15,6 +15,8 @@ import com.example.calmall.user.entity.User;
 import com.example.calmall.user.repository.UserRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.HttpStatus;
@@ -22,7 +24,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -31,6 +32,8 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class ReviewServiceImpl implements ReviewService {
+
+    private static final Logger log = LoggerFactory.getLogger(ReviewServiceImpl.class);
 
     private final ReviewRepository reviewRepository;
     private final ReviewImageRepository reviewImageRepository;
@@ -43,29 +46,35 @@ public class ReviewServiceImpl implements ReviewService {
     @Override
     @Transactional
     public ResponseEntity<ApiResponseDto> postReview(ReviewRequestDto requestDto, String userId) {
+        log.debug("==== [DEBUG] postReview called userId={}", userId);
 
         // ===== ユーザー存在チェック =====
         User user = userRepository.findByUserId(userId)
                 .orElseThrow(() -> new IllegalArgumentException("ユーザーが存在しません"));
+        log.debug("==== [DEBUG] user found: {}", user.getUserId());
 
         // ===== 商品存在チェック =====
         Product product = productRepository.findByItemCode(requestDto.getItemCode())
                 .orElseThrow(() -> new IllegalArgumentException("商品が存在しません"));
+        log.debug("==== [DEBUG] product found: {}", product.getItemCode());
 
         // 再投稿防止チェック（削除済みレビューあり）
         if (!reviewRepository.findByUser_UserIdAndProduct_ItemCodeAndDeletedTrue(userId, product.getItemCode()).isEmpty()) {
+            log.debug("==== [DEBUG] 再投稿禁止（削除済レビューあり）");
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body(new ApiResponseDto("削除済レビューが存在するため再投稿できません"));
         }
 
-        //  再投稿防止チェック（既に投稿済み）
+        // 再投稿防止チェック（既に投稿済み）
         if (!reviewRepository.findByProduct_ItemCodeAndUser_UserIdAndDeletedFalse(product.getItemCode(), userId).isEmpty()) {
+            log.debug("==== [DEBUG] 再投稿禁止（既に投稿済み）");
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body(new ApiResponseDto("この商品には既にレビューを投稿済みです"));
         }
 
         // 購入履歴チェック
         List<Orders> orders = ordersRepository.findOrdersByUserAndItemCode(userId, product.getItemCode());
+        log.debug("==== [DEBUG] orders.size={}", orders.size());
         if (orders.isEmpty()) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body(new ApiResponseDto("未購入の商品にはレビューできません"));
@@ -75,6 +84,7 @@ public class ReviewServiceImpl implements ReviewService {
         LocalDateTime oneMonthAgo = LocalDateTime.now().minusMonths(1);
         boolean purchasedWithinOneMonth =
                 ordersRepository.existsPurchaseWithinPeriod(userId, product.getItemCode(), oneMonthAgo);
+        log.debug("==== [DEBUG] purchasedWithinOneMonth={}", purchasedWithinOneMonth);
         if (!purchasedWithinOneMonth) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body(new ApiResponseDto("購入後1ヶ月以内のユーザーのみレビュー可能です"));
@@ -94,66 +104,65 @@ public class ReviewServiceImpl implements ReviewService {
                 .build();
 
         Review savedReview = reviewRepository.save(review);
+        log.debug("==== [DEBUG] review saved id={}", savedReview.getReviewId());
 
         Set<String> finalImageList = new LinkedHashSet<>();
 
         if (requestDto.getImageList() != null && !requestDto.getImageList().isEmpty()) {
-
             // 1リクエスト内の重複URLを除去
             Set<String> uniqueUrls = new LinkedHashSet<>(requestDto.getImageList());
+            log.debug("==== [DEBUG] imageList size={}", uniqueUrls.size());
 
             for (String imageUrl : uniqueUrls) {
                 Optional<ReviewImage> optionalReviewImage = reviewImageRepository.findByImageUrl(imageUrl);
 
-                // DBに存在しない画像はスキップ
                 if (optionalReviewImage.isEmpty()) {
-                    System.out.println("[SKIP] DBに存在しない画像: " + imageUrl);
+                    log.debug("[SKIP] DBに存在しない画像: {}", imageUrl);
                     continue;
                 }
 
                 ReviewImage reviewImage = optionalReviewImage.get();
 
-                // 他のレビューに紐付いている場合はスキップ
                 if (reviewImage.getReview() != null &&
                         !reviewImage.getReview().getReviewId().equals(savedReview.getReviewId())) {
-                    System.out.println("[SKIP] 他のレビューに紐付け済: " + imageUrl);
+                    log.debug("[SKIP] 他のレビューに紐付け済: {}", imageUrl);
                     continue;
                 }
 
-                // このレビューに既に紐付いている場合もスキップ
                 if (reviewImage.getReview() != null &&
                         reviewImage.getReview().getReviewId().equals(savedReview.getReviewId())) {
-                    System.out.println("[SKIP] このレビューに既に紐付け済: " + imageUrl);
+                    log.debug("[SKIP] このレビューに既に紐付け済: {}", imageUrl);
                     continue;
                 }
 
                 reviewImageRepository.updateReviewBindingNative(reviewImage.getId(), savedReview.getReviewId());
-
-                // 表示用URLリストに追加
                 finalImageList.add(imageUrl);
-                System.out.println("[LINKED] 紐付け完了: " + imageUrl);
+                log.debug("[LINKED] 紐付け完了: {}", imageUrl);
             }
         }
 
-        //  紐付け成功したURLのみ Review.imageList にセット（DBには保存されない）
         savedReview.setImageList(new ArrayList<>(finalImageList));
+        log.debug("==== [DEBUG] review linked images={}", savedReview.getImageList().size());
 
         return ResponseEntity.ok(new ApiResponseDto("success"));
     }
 
-
-    public List<String> currentImages (Review review) {
+    public List<String> currentImages(Review review) {
         return reviewImageRepository.findAllByReview(review).stream()
                 .map(ReviewImage::getImageUrl)
                 .collect(Collectors.toList());
     }
+
     // 商品別レビュー取得
     @Override
     public ResponseEntity<ReviewListByItemResponseDto> getReviewsByItem(String itemCode, String userId, int page, int size) {
+        log.debug("==== [DEBUG] getReviewsByItem called itemCode={} page={}", itemCode, page);
+
         Page<Review> reviewPage = reviewRepository.findByProduct_ItemCodeAndDeletedFalse(
                 itemCode, PageRequest.of(page, size)
         );
         List<Review> allReviews = reviewRepository.findByProduct_ItemCodeAndDeletedFalse(itemCode);
+        log.debug("==== [DEBUG] reviewPage={} allReviews={}", reviewPage.getTotalElements(), allReviews.size());
 
         Map<Integer, Long> ratingStatsMap = allReviews.stream()
                 .collect(Collectors.groupingBy(Review::getRating, Collectors.counting()));
@@ -164,8 +173,6 @@ public class ReviewServiceImpl implements ReviewService {
                     .count(ratingStatsMap.getOrDefault(i, 0L))
                     .build());
         }
-
-
 
         List<ReviewListByItemResponseDto.ReviewInfo> reviewInfos = reviewPage.getContent().stream()
                 .map(r -> ReviewListByItemResponseDto.ReviewInfo.builder()
@@ -182,6 +189,7 @@ public class ReviewServiceImpl implements ReviewService {
                         .isOwner(userId != null && userId.equals(r.getUser().getUserId()))
                         .build())
                 .collect(Collectors.toList());
+        log.debug("==== [DEBUG] reviewInfos size={}", reviewInfos.size());
 
         ReviewListByItemResponseDto.MyReview myReview = null;
         if (userId != null) {
@@ -200,28 +208,30 @@ public class ReviewServiceImpl implements ReviewService {
                         .isOwner(userId.equals(r.getUser().getUserId()))
                         .likeCount(reviewLikeRepository.countByReviewReviewId(r.getReviewId()))
                         .build();
+                log.debug("==== [DEBUG] myReview exists reviewId={}", r.getReviewId());
             }
         }
+
         return ResponseEntity.ok(ReviewListByItemResponseDto.builder()
                 .message("success")
                 .reviews(reviewInfos)
                 .ratingStats(ratingStats)
                 .myReview(myReview)
                 .totalPages(reviewPage.getTotalPages())
-                .currentPage(reviewPage.getNumber())
+                .currentPage(reviewPage.getNumber() + 1)
                 .hasNext(reviewPage.hasNext())
                 .totalElements(reviewPage.getTotalElements())
                 .build());
     }
 
-
     // ユーザー別レビュー取得
     @Override
     public ResponseEntity<ReviewListByUserResponseDto> getReviewsByUser(User user, int page, int size) {
+        log.debug("==== [DEBUG] getReviewsByUser called user={}", user.getUserId());
 
         Page<Review> reviewPage = reviewRepository.findByUserAndDeletedFalse(user, PageRequest.of(page, size));
+        log.debug("==== [DEBUG] reviewPage.total={}", reviewPage.getTotalElements());
 
-        // 画面表示用のDTOへ
         var userReviews = reviewPage.getContent().stream()
                 .map(r -> ReviewListByUserResponseDto.UserReview.builder()
                         .reviewId(r.getReviewId())
@@ -237,86 +247,74 @@ public class ReviewServiceImpl implements ReviewService {
                         .likeCount(reviewLikeRepository.countByReviewReviewId(r.getReviewId()))
                         .isOwner(true)
                         .build())
-                .toList();
+                .collect(Collectors.toList());
+        log.debug("==== [DEBUG] userReviews size={}", userReviews.size());
 
         return ResponseEntity.ok(ReviewListByUserResponseDto.builder()
                 .message("success")
                 .reviews(userReviews)
                 .totalPages(reviewPage.getTotalPages())
-                .currentPage(reviewPage.getNumber())
+                .currentPage(reviewPage.getNumber() + 1)
                 .hasNext(reviewPage.hasNext())
                 .totalElements(reviewPage.getTotalElements())
                 .build());
     }
 
-
     // レビュー編集処理
     @Override
     @Transactional
     public ResponseEntity<ReviewDetailResponseDto> updateReview(Long reviewId, ReviewUpdateRequestDto requestDto, String userId) {
+        log.debug("==== [DEBUG] updateReview called reviewId={} userId={}", reviewId, userId);
 
-        // レビュー存在チェック
         Review review = reviewRepository.findById(reviewId)
                 .orElseThrow(() -> new IllegalArgumentException("レビューが存在しません"));
 
-        // 論理削除チェック
         if (review.isDeleted()) {
             throw new IllegalArgumentException("削除済みレビューは編集できません");
         }
 
-        // 本人確認
         if (!review.getUser().getUserId().equals(userId)) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
         }
 
-        // 評価・タイトル・コメントを更新
         review.setRating(requestDto.getRating());
         review.setTitle(requestDto.getTitle());
         review.setComment(requestDto.getComment());
         review.setUpdatedAt(LocalDateTime.now());
+        log.debug("==== [DEBUG] review updated fields");
 
-        // 既存の画像枚数を取得
         List<String> currentImages = reviewImageRepository.findAllByReview(review).stream()
                 .map(ReviewImage::getImageUrl)
                 .collect(Collectors.toList());
-
         int currentCount = currentImages.size();
+        log.debug("==== [DEBUG] currentImages count={}", currentCount);
 
-        // 新規追加画像のURLリスト
         List<String> addUrls = requestDto.getImageList() != null
                 ? new ArrayList<>(new LinkedHashSet<>(requestDto.getImageList()))
                 : new ArrayList<>();
 
-        // 追加枚数チェック
         if (currentCount + addUrls.size() > 3) {
             throw new IllegalArgumentException("画像は最大3枚まで追加できます（超える場合は削除APIで削除してください）");
         }
 
-        // 新しい画像だけを紐付け
         for (String imageUrl : addUrls) {
             Optional<ReviewImage> optionalImage = reviewImageRepository.findByImageUrl(imageUrl);
-
-            // DBに存在しない → スキップ
             if (optionalImage.isEmpty()) continue;
 
             ReviewImage img = optionalImage.get();
-
-            // 他レビューに紐付いている → スキップ
             if (img.getReview() != null && !img.getReview().getReviewId().equals(reviewId)) continue;
 
-            // 紐付け更新
             reviewImageRepository.updateReviewBindingNative(img.getId(), reviewId);
+            log.debug("==== [DEBUG] linked imageUrl={}", imageUrl);
         }
 
-        // 最新の画像リストを取得
         List<String> finalImageList = reviewImageRepository.findAllByReview(review).stream()
                 .map(ReviewImage::getImageUrl)
                 .collect(Collectors.toList());
-
         review.setImageList(finalImageList);
         reviewRepository.save(review);
+        log.debug("==== [DEBUG] finalImageList size={}", finalImageList.size());
 
-        // 編集後の詳細DTOを作成して返す
         boolean isLiked = reviewLikeRepository.existsByUserUserIdAndReviewReviewId(userId, reviewId);
 
         ReviewDetailResponseDto responseDto = ReviewDetailResponseDto.builder()
@@ -340,6 +338,8 @@ public class ReviewServiceImpl implements ReviewService {
     @Override
     @Transactional
     public ResponseEntity<ApiResponseDto> deleteReview(Long reviewId, String userId) {
+        log.debug("==== [DEBUG] deleteReview called reviewId={} userId={}", reviewId, userId);
+
         Review review = reviewRepository.findById(reviewId)
                 .orElseThrow(() -> new IllegalArgumentException("レビューが存在しません"));
 
@@ -349,6 +349,8 @@ public class ReviewServiceImpl implements ReviewService {
         }
         review.setDeleted(true);
         review.setUpdatedAt(LocalDateTime.now());
+        log.debug("==== [DEBUG] review deleted id={}", reviewId);
+
         return ResponseEntity.ok(new ApiResponseDto("success"));
     }
 
@@ -357,20 +359,18 @@ public class ReviewServiceImpl implements ReviewService {
      */
     @Override
     public ResponseEntity<ReviewDetailResponseDto> getReviewDetail(Long reviewId, String currentUserId) {
-        // レビュー存在チェック
+        log.debug("==== [DEBUG] getReviewDetail called reviewId={} currentUserId={}", reviewId, currentUserId);
+
         Review review = reviewRepository.findById(reviewId)
                 .orElseThrow(() -> new IllegalArgumentException("レビューが存在しません"));
 
-        // 投稿者情報
         String reviewAuthorId = review.getUser().getUserId();
-        String userNickname = review.getUser().getNickname(); // 投稿者ニックネーム
+        String userNickname = review.getUser().getNickname();
 
-        // 商品情報
         String itemCode = review.getProduct().getItemCode();
         String itemName = review.getProduct().getItemName();
-        List<String> imageUrls = review.getProduct().getImages(); // 商品画像リスト
+        List<String> imageUrls = review.getProduct().getImages();
 
-        // ログインユーザー情報
         boolean isOwner = currentUserId != null && currentUserId.equals(reviewAuthorId);
         boolean isLiked = false;
         if (currentUserId != null) {
@@ -394,6 +394,7 @@ public class ReviewServiceImpl implements ReviewService {
                 .isOwner(isOwner)
                 .build();
 
+        log.debug("==== [DEBUG] getReviewDetail done reviewId={}", reviewId);
         return ResponseEntity.ok(detail);
     }
 }
